[package]
name = "supplier"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Provider API polyfill. WIP"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/supplier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
